--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -222,3 +222,19 @@ pre tt:before,
 pre tt:after {
   content: none;
 }
+
+.embed-video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  margin: 2rem 0;
+}
+
+.embed-video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
